# pomodorolm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  PKGBUILD  README.md  cliff.toml  docker-compose.yaml  elm.json  index.html  main.css  org.jousse.vincent.Pomodorolm.desktop  org.jousse.vincent.Pomodorolm.metainfo.xml  package-lock.json  package.json  pyproject.toml  snapcraft.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-only.yml  ci.yml  flatpak.yml  manual-release.yml  publish-to-auto-release.yml  snapcraft.yml  winget-release.yml
aur/: PKGBUILD
css/: main.css
docs/themes/: theme-template.json  themes.md
flatpak/: README.md  cargo-sources.json  elm-sources.json  flatpak-elm-generator.py  generated-sources.json  node-sources.json  org.jousse.vincent.Pomodorolm.metainfo.xml  org.jousse.vincent.Pomodorolm.yml  org.jousse.vincent.Pomodorolm.yml.full
html/: index.html
js/: app.js
review/: elm.json
review/src/: ReviewConfig.elm
snapcraft/: README.md  asound.conf  snapcraft.yaml
src/: Main.elm
src-elm/: ColorHelper.elm  Json.elm  ListWithCurrent.elm  Main.elm  Themes.elm  TimeHelper.elm  Types.elm  View.elm
src-elm/View/: Drawer.elm  Nav.elm  Timer.elm
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  config.rs  gui.rs  icon.rs  lib.rs  main.rs  pomodoro.rs  sound.rs
src-tauri/tests/: pomodoro_session_file_test.rs  pomodoro_test.rs
src-tauri/themes/: catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  pomodorolm.json  pomotroid.json
src-ts/: main.ts
