[package]
name = "pomodorolm"
version = "0.4.0"
description = "A Tauri App"
authors = ["Vincent Jousse"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools", "tray-icon", "image-png"] }
image = { version = "0.25", features = ["png"] }
tempfile = "3.10.1"
toml = "0.8.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tokio-stream = "0.1.15"
hex_color = "3.0.0"
hyper-tls = "0.6.0"
rustls-pemfile = "2.1.3"
rodio = "0.19.0"
clap = { version = "4.0.32", features = ["derive"] }
tauri-plugin-dialog = "2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "pomodorolm_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
